fix: Add media query for home page on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,13 +56,14 @@ body {
     height: fit-content;
     background-color: rgba(160, 155, 155, 0.3);
     padding-top: 30px;
+    position: relative;
 }
 
 #credit-display {
     height: 30px;
     width: 300px;
     position: absolute;
-    top: 3%;
+    top: -11%;
     right: 2%;
     border: 1px black;
 }
@@ -406,4 +407,54 @@ input {
     width: 45%;
     text-align: center;
     padding: 10px;
+}
+
+/* Media Query for small size screens */
+@media screen and (max-width: 500px) {
+    #welcome-message {
+        width: 300px;
+    }
+
+    #welcome-message p {
+        padding-bottom: 20px;
+    }
+
+    p {
+        padding: 5px;
+        font-size: 14px;
+    }
+
+    #bet {
+        font-size: 14px;
+    }
+
+    .button {
+        font-size: medium;
+        margin: 0 10px 0;
+    }
+
+    #credit-display p {
+        font-size: 10px;
+    }
+
+    #credit-display {
+        width: fit-content;
+        top: 4%;
+        right: 50%;
+        color: #ba8475;
+        transform: translate(50%, -50%);
+    }
+
+    #navigation ul {
+        top: 60%;
+        font-size: 10px;
+    }
+
+    #navigation ul li {
+        margin: 3px;
+    }
+
+    h1 {
+        font-size: 26px;
+    }
 }
